conf/iptables
# Generated by iptables-save v1.4.7 on Mon Jul  9 18:25:24 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
-A INPUT -p tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -p tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A INPUT -p tcp --tcp-flags ACK,FIN FIN -j DROP
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

#nginx 80
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT

#nginx status
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 8111 -j ACCEPT

#mysql
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 3306 -j ACCEPT

#infobright
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 5029 -j ACCEPT

#ssh
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT


#snmp¼à¿Ø
-A INPUT -i eth0 -p udp -s 120.31.134.31 -m multiport --dports 161,3306 -j ACCEPT
-A INPUT -i eth0 -p udp -s 122.13.176.31 -m multiport --dports 161,3306 -j ACCEPT
-A INPUT -i eth0 -p udp -s 60.195.252.107 -m multiport --dports 161,3306 -j ACCEPT
-A INPUT -i eth0 -p udp -s 221.1.220.218 -m multiport --dports 161,3306 -j ACCEPT
-A INPUT -i eth0 -p udp -s 60.195.252.110 -m multiport --dports 161,3306 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited

COMMIT
